--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <img src="mas-ai-logo.png" alt="MAS-AI Logo">
+    <img src="mas-ai-logo.jpg" alt="MAS-AI Logo">
     <h1>MAS-AI</h1>
     <p>Innovative AI solutions. Coming Soon...</p>
     <div class="logos">
